<resources>
    <string name="app_name">Eorder</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="store">Identificador de tienda.</string>
    <string name="action_sign_in">Loguea</string>
    <string name="action_sign_in_short">Loguea</string>
    <string name="product_added">Producto añadido a la cesta</string>
    <string name="menu_added">Menú añadido a la cesta</string>
    <string name="menu_canceled">Menú cancelado</string>
    <string name="product_not_id">Producto no encontrado con id </string>
    <string name="buy">Comprar</string>
    <string name="delete">Eliminar</string>
    <string name="cart">Cesta</string>
    <string name="total">Total: </string>
    <string name="choose">Elige:  </string>
    <string name="cancel">Cancela</string>
    <string name="ordermoduson">Por favor, pasa por caja para pagar tu pedido nº :</string>
    <string name="ordermodusoff">Por favor, pague al recoger el pedido nº :</string>
    <string name="gotIt">¡Lo tengo!</string>
    <string name="catalog">Catálogo</string>
    <string name="title_preference">Tipo de produtos</string>
    <string name="done">Hecho</string>
    <string name="cart_empty">La cesta está vacía</string>
    <string name="no_stock">No queda stock para :</string>
    <string name="no_stock_dessert">No queda stock para postres.</string>
    <string name="removed">Algunos productos del carrito se eliminaron por falta de existencias. ¿Desea regresar al catálogo?</string>
    <string name="removed_sync">Algunos productos del carrito se eliminaron por falta de existencias.</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="empty_login">Los campos email y password no pueden estar vacíos.</string>
    <string name="empty_url">El campo Url no puede estar vacío.</string>
    <string name="empty_store">El campo tienda no puede estar vacío.</string>
    <string name="no_sell">No hay suficientes unidades del producto para la venta.</string>
    <string name="remain">Quedan: </string>
    <string name="unities">unidades.</string>
    <string name="modus">Los pedidos deben pagarse antes de asignarlos.</string>
    <string name="kakigor_bebidas">¿Quieres kakigori o bebida?</string>
    <string name="no_stock_kakigori">No queda stock para kakigoris.</string>
    <string name="refresh">Refrescar</string>
    <string name="choose_store">Elige stand</string>
    <string name="location_perm">Permiso de ubicación necesario para comprobar la disponibilidad de stands</string>
    <string name = "location_null">No se ha podido acceder a la ubicación, revisa los permisosde la aplicación y activa la ubicación.</string>
    <string name="cuppon">Tengo un cupón</string>
    <string name="cuppon_ok">Cupón aplicado.</string>
    <string name="cuppon_already_use">Este cupón ya se había aplicado antes.</string>
    <string name="accept">Aceptar</string>
    <string name="cuppon_product">Este cupón es para un producto que no está en el carrito actualmente.</string>
    <string name="cuppon_removed">Se ha eliminado el cupón por no haber productos asociados en el carrito</string>
</resources>

